# sun-autobad

./: README.md
sun-1.3/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
sun-1.3/po/: POTFILES.in  POTFILES.skip
sun-1.3/src/: Makefile.am  Makefile.in  angle.cpp  angle.h  equationOfTime.cpp  equationOfTime.h  evaluate.c  evaluate.h  expression.c  expression.h  globals.h  juliandays.cpp  lexer.c  lexer.h  lexer.l  location_expression.c  location_expression.h  machineLocation.h  main.c  main.h  parse_options.c  parse_options.h  parser.c  parser.h  parser.y  self_test.c  self_test.h  startime.cpp  startime.h  sun.cpp  sun.h  sun_intl.h
