AC_INIT([sun], [1.3], [strauss@positive-internet.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC([g++])
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_YACC
IT_PROG_INTLTOOL
AM_GNU_GETTEXT_VERSION(0.19.7)
AM_GNU_GETTEXT([external])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
  src/Makefile
  ])
AC_OUTPUT([po/Makefile.in],)
