bin_PROGRAMS = sun
sun_SOURCES = lexer.l lexer.h parser.y parser.h expression.c location_expression.c main.c evaluate.c angle.cpp juliandays.cpp sun.cpp startime.cpp equationOfTime.cpp parse_options.c self_test.c angle.h  equationOfTime.h evaluate.h expression.h globals.h location_expression.h parse_options.h self_test.h sun.h main.h startime.h machineLocation.h sun_intl.h
